# audio_style_transfer

./: README.md  pyproject.toml
proj_sdsc/: __init__.py
proj_sdsc/algorithm/: algo.py  gatys.py  pl_gatys.py
proj_sdsc/model/: dataset.py  discriminator.py  test.py  train.py
tests/: cross_validation.py  different_spectrograms.py  grid_search.py  style_transfer_checks.py  testing_metrics.py  train_with_acc_loss_plot.py
tests/ST_checks/: ST_result_10000.npy  ST_result_300.npy  ST_result_3000.npy  ST_result_3000tv.npy
tests/cross_validation/: cv.npy
tests/train_with_acc_loss_plot/: data_train_100.npy
